tests/unused_promise/unused_promise.exp
Error ------------------------------------------------------------------------------------------------------ test.js:8:5

`Promise` in async scope is unused. Did you mean to `await` it? [unused-promise]

   8|     foo(); // error
          ^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:10:5

`Promise` in async scope is unused. Did you mean to `await` it? [unused-promise]

   10|     bar(); // error
           ^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:31:5

`Promise` in sync scope is unused.Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   31|     foo(); // error
           ^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:32:5

`Promise` in sync scope is unused.Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   32|     foo().then(() => {}); // error
           ^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:33:5

`Promise` in sync scope is unused.Promises must be handled by calling .then with a rejection handler, .catch, or
.finally. [unused-promise]

   33|     foo().then(() => {}).then(() => {}); // error
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 5 errors
